[package]
name = "u4pak"
version = "1.4.0"
authors = ["Mathias Panzenböck <grosser.meister.morti@gmx.net>", "L. Sprengel <l.sprengel@pm.me>"]
edition = "2018"
license-file = "LICENSE.txt"

[[bin]]
name="u4pak"
path="src/bin/u4pak/main.rs"

[lib]
name="u4pak"
path="src/lib.rs"

[dependencies]
clap = "2.34"
chrono = "0.4"
flate2 = "1.0.22"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
num_cpus = "1.13.1"
# OpenSSL adds too much bloat and is not in pure rust
# it requires the user to compile and install the c source
# it is not essential for the sha1 to be extremely fast
sha1_smol = "1.0"
terminal_size = "0.2"
aes = "0.8"
base64 = "0.20"
log = "0.4"
env_logger = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
# for sendfile() and fuse support
libc = "0.2.113"

# FUSE might work on other OSes too (like macOS and BSD), but I don't use
# anything other than Linux (testing Windows binaries through wine).
# Also I use "cntr-fuse" because it seems to be more actively maintained than
# "fuse". Is that a wise choice?
cntr-fuse = { version = "0.4" }

daemonize = { version = "0.4.1" }
